testimonials section corrected on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -2651,7 +2651,7 @@ text-align: center;
     .testimonial-card {
 
         width:80%;
-        max-width:350px;
+        max-width:300px;
     }
     
     .testimonial-text {
